# vehicle-koubei-web-demo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
apps/api/: pyproject.toml  requirements-docker.txt
apps/api/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
apps/api/app/routes/: access.py  admin.py  comparisons.py  jobs.py  vehicles.py
apps/api/app/services/: ai_report.py  comment_time_reports.py  comparisons.py  confirmed_vehicle_series.py  dependencies.py  eta.py  job_queue.py  keyword_rank_images.py  llm_client.py  passphrase.py  qa_service.py  report_context_builder.py  report_validator.py  result_assembler.py  result_reader.py  stage_progress.py  tool_runner.py  vehicle_resolver.py
apps/api/tests/: test_access_and_jobs.py  test_ai_report.py  test_comparisons.py  test_config.py  test_job_qa.py  test_llm_client.py  test_result_assembler.py  test_result_reader.py  test_time_reports.py  test_vehicle_resolver.py
apps/worker/: pyproject.toml  requirements-docker.txt  worker.py  worker_jobs.py
apps/worker/tests/: test_cleanup.py  test_comparison_outputs.py  test_corpus.py  test_dependencies.py  test_hermes_outputs.py  test_job_store.py  test_openclaw_runner.py  test_postprocess_bridge.py  test_runner.py  test_sandbox_scripts.py  test_stage_orchestration.py  test_worker_jobs.py
apps/worker/worker_app/: __init__.py  artifacts.py  cleanup.py  comparison_outputs.py  corpus.py  dependencies.py  hermes_outputs.py  job_store.py  jobs.py  openclaw_runner.py  postprocess_bridge.py  progress.py  queue.py  runner.py  stages.py
config/: dependencies.yaml
docs/: cloud-deployment.md  frontend-redesign-plan.md  next-session-brief.md  openclaw-skill-flow.md  project-0-to-1-retrospective.md  workspace-layout.md  (+2 more)
(+31 files in other folders)
