[project]
name = "vehicle-koubei-api"
version = "0.1.0"
description = "FastAPI service for the vehicle koubei web demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.0,<0.137.0",
  "httpx>=0.28.0,<0.29.0",
  "openpyxl>=3.1.0,<3.2.0",
  "pydantic-settings>=2.14.0,<2.15.0",
  "psycopg[binary]>=3.2.0,<3.3.0",
  "pyyaml>=6.0.0,<7.0.0",
  "redis>=7.4.0,<8.0.0",
  "requests>=2.32.0,<3.0.0",
  "rq>=2.8.0,<2.9.0",
  "sqlalchemy>=2.0.0,<2.1.0",
  "uvicorn>=0.46.0,<0.47.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0,<10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
