[project]
name = "vehicle-koubei-worker"
version = "0.1.0"
description = "Worker runtime for the vehicle koubei web demo"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2.0,<3.3.0",
  "pyyaml>=6.0.0,<7.0.0",
  "redis>=7.4.0,<8.0.0",
  "rq>=2.8.0,<2.9.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "websockets>=15.0.0,<16.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0,<10.0.0",
]
