[project]
name = "vehicle-koubei-worker"
version = "0.1.0"
description = "Worker runtime for the vehicle koubei web demo"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.0,<3.2.0",
  "pandas>=2.2.0,<2.3.0",
  "pillow>=11.0.0,<12.0.0",
  "psycopg[binary]>=3.2.0,<3.3.0",
  "pyyaml>=6.0.0,<7.0.0",
  "redis>=7.4.0,<8.0.0",
  "requests>=2.32.0,<3.0.0",
  "rq>=2.8.0,<2.9.0",
  "sqlalchemy>=2.0.0,<2.1.0",
  "tqdm>=4.67.0,<5.0.0",
  "websockets>=15.0.0,<16.0.0",
  "wordcloud>=1.9.0,<2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0,<10.0.0",
]
